# rat

./: Cargo.toml  LICENSE  README.md
.github/actions/: release.yml
.github/workflows/: release.yml
src/: main.rs  winit_app.rs
