[package]
edition = "2021"
name = "rat"
version = "0.1.0"

[dependencies]
eframe = {version = "0.29.1", features = [
  "default",
]}
egui = "0.29.1"
egui_extras = {version = "0.29.1", features = ["default", "all_loaders"]}
env_logger = {version = "0.10", default-features = false, features = [
  "auto-color",
  "humantime",
]}
image = {version = "0.25", features = ["jpeg", "png"]}

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
