[package]
name = "rat"
version = "2.0.0"
edition = "2024"

[dependencies]
image = { version = "0.25.6", default-features = false, features = ["webp"] }
softbuffer = "0.4.6"
winit =  "0.30.11"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.